--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    annotationProcessor project(':arouter-compiler')
+//    annotationProcessor project(':arouter-compiler')
     compile project(':arouter-api')
-    compile project(':module-java')
-    compile project(':module-kotlin')
+//    compile project(':module-java')
+//    compile project(':module-kotlin')
     compile project(':arouter-annotation')
 
     compile 'com.alibaba:fastjson:1.2.9'
