--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include ':app'
 include ':arouter-api'
-include ':arouter-compiler'
+//include ':arouter-compiler'
 include ':arouter-annotation'
-include ':module-java'
-include ':module-kotlin'
-include ':arouter-gradle-plugin'
+//include ':module-java'
+//include ':module-kotlin'
+//include ':arouter-gradle-plugin'
